--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-api": "cd api && env/bin/flask run --no-debugger"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.11",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -22,5 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
