--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-awesome-reveal": "^4.2.11",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
