--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@radix-ui/themes": "^3.2.1",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.11",
